# IPCC2022-Pivot-Heptagon2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  defs.hpp  makefile  pivot.cc  run.sh  submit.sh  uniformvector-4dim-1h.txt  vtrun.sh
microbench/: simd_prefix_max.cc
